force-app/main/default/objects/Penny_Quest_Submission__c/Penny_Quest_Submission__c.object-meta.xml
<CustomObject>
    <label>Penny Quest Submission</label>
    <nameField>
        <label>Penny Quest Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Penny Quest Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>