force-app/main/default/objects/Penny_Quest_Submission__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Course_Module_Activity__c</referenceTo>
    <relationshipLabel>Penny Quest Submissions</relationshipLabel>
    <relationshipName>Assignment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>