force-app/main/default/objects/Penny_Quest_Submission__c/fields/Submission_Text__c.field-meta.xml
<CustomField>
    <fullName>Submission_Text__c</fullName>
    <label>Submission Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>